fixed padding bug on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@
   src: url("../fonts/bullpen_hv.ttf");
 }
 
-
+@media only screen and (min-width: 768px){
 body{
   padding: 1rem 5rem ;
 }
@@ -36,16 +36,43 @@ img{
 }
 .header{
   display: flex;
+  width: 100%;
 
+  & .logo{
+    
+  }
   & .menu{
+    display: flex;
+    width: 100%;
+    margin: 1% 0 0 10%;
+    position: relative;
 
     & a{
+      flex: 1;
       text-decoration: none;
+      font-size: 2rem;
+      font-family: "Custom_filled";
+      text-align: center;
+      color: $gold_color;
+      text-transform: uppercase;
+      font-weight: 900;
+      // font-weight: 900;
+    
+    }
+    & a:hover{
+      border: .1rem solid rgba(147, 147, 147, 0.546);
+      border-top: 1rem;
+      border-right: 1rem;
+      font-family: "3d_custom";
+      font-size: 2.5rem;
+      letter-spacing: 0.6rem;
+      text-transform: capitalize;
+      padding-top: 1rem;
     }
   }
 }
 
-
+}
 
 
 
